apps/nodejs-tesst-2/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nodejs-tesst-2
  labels:
    name: nodejs-tesst-2
    managed-by: dev-portal
