apps/nodejs-tesst-2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-tesst-2
  namespace: nodejs-tesst-2
  labels:
    app: nodejs-tesst-2
    environment: production
  annotations:
    argocd-image-updater.argoproj.io/image-list: nodejs-tesst-2=ghcr.io/quancv2k4/nodejs_tesst
    argocd-image-updater.argoproj.io/write-back-method: git
    argocd-image-updater.argoproj.io/write-back-target: apps/nodejs-tesst-2/deployment.yaml
    argocd-image-updater.argoproj.io/nodejs-tesst-2.update-strategy: latest
    argocd-image-updater.argoproj.io/nodejs-tesst-2.allow-tags: regexp:^.*$
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-tesst-2
  template:
    metadata:
      labels:
        app: nodejs-tesst-2
        environment: production
      annotations:
        timestamp: "1761812796"
    spec:
      containers:
      - name: nodejs-tesst-2
        image: ghcr.io/quancv2k4/nodejs_tesst:latest
        command: ["/bin/sh", "-c"]
        args:
          - |
            node server.js
        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "sleep 5"]
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: nodejs-tesst-2-data
          mountPath: /app/data
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /api/health/
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/health/
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: nodejs-tesst-2-data
        persistentVolumeClaim:
          claimName: nodejs-tesst-2-pvc
