apps/nodejs-tesst-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-tesst-2-service
  namespace: nodejs-tesst-2
  labels:
    app: nodejs-tesst-2
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: nodejs-tesst-2
